--- a/algorithm/1-基础知识.md
+++ b/algorithm/1-基础知识.md
@@ -9,7 +9,7 @@
 | 选择排序     | selection | $n^2$          | $n^2$          | $n^2$          | $1$        | 不稳   |
 | 冒泡排序     | bubble    | $n^2$          | $n^2$          | $n$            | $1$        | 稳     |
 | **插入排序** | insertion | $n^2$          | $n^2$          | $n$            | $1$        | 稳     |
-| **快速排序** | quick     | $nlog_2n$      | $n^2$          | $nlog_2n$      | $nlog_2n$  | 不稳   |
+| **快速排序** | quick     | $nlog_2n$      | $n^2$          | $nlog_2n$      | $log_2n$   | 不稳   |
 | **归并排序** | merge     | $nlog_2n$      | $nlog_2n$      | $nlog_2n$      | $n$        | 稳     |
 | **堆排序**   | heap      | $nlog_2n$      | $nlog_2n$      | $nlog_2n$      | $1$        | 不稳   |
 | 希尔排序     | shell     | $n^{1.3}$      | $n^2$          | $n$            | $1$        | 不稳   |
